[package]
name = "recycle"
version = "0.1.0"
edition = "2021"
authors = ["Kangsan Kim <k1610221@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
openssl = "0.10.45"
reqwest = { version = "0.11.13", features = ["blocking"] }
